[FIX] Fixed a bug in the overflow style.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,19 +3,15 @@
 #layout {
   max-width: 100vw;
   min-height: 100dvh;
-  text-align: center;
   display: grid;
-  grid-template-rows: auto 8fr auto;
+  grid-template-rows: auto 1fr auto;
 }
 
 #layout .header { grid-row-start: 1; }
 #layout .main {
-  display: flex;
-    align-items: center;
-    justify-content: center;
   grid-row-start: 2;
-  height: 100%;
-  width: 100%;
+  overflow-y: auto;
+  padding: 2rem 1rem;
 }
 #layout .footer { grid-row-start: 3; }
 
